--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,67 @@
 .App {
-  text-align: center;
+	width: 80%;
+	margin: 80px auto;
+}
+header {
+	width: 100%;
+	top: 0;
+	left: 0;
+	display: table;
+	box-shadow: 0px 5px 15px #e9e9e9;
+	position: fixed;
+	z-index: 9999;
+}
+header .logo {
+	float: left;
+	line-height: 55px;
+	height: 55px;
+	padding-left: 10%;
+	font-size: 18px;
+	font-weight: 600;
+}
+nav {
+	float: right;
+	padding-right: 10%;
+}
+ul {
+	list-style: none;
+	display: flex;
+	margin: 0;
+}
+nav ul li {
+	padding: 0 20px;
+}
+nav ul li a {
+	line-height: 55px;
+	height: 55px;
+	font-size: 14px;
+	font-weight: 400;
+	color: #000;
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Home */
+#home-sec1 {
+	height: 100vh;
+	width: 100%;
+	display: table;
+	background-color: #ffffff;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
