--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,10 @@
 	width: 80%;
 	margin: 80px auto;
 }
+.App-Auth {
+	width: 60%;
+	margin: 100px auto;
+}
 header {
 	width: 100%;
 	top: 0;
@@ -10,6 +14,7 @@ header {
 	box-shadow: 0px 5px 15px #e9e9e9;
 	position: fixed;
 	z-index: 9999;
+	background-color: #ffffff;
 }
 header .logo {
 	float: left;
@@ -41,6 +46,7 @@ nav ul li a {
 }
 a:hover {
 	text-decoration: none;
+	cursor: pointer;
 }
 
 /* Home */
@@ -49,6 +55,60 @@ a:hover {
 	width: 100%;
 	display: table;
 	background-color: #ffffff;
+}
+
+/* Auth Form */
+.auth-form {
+	width: 500px;
+	margin: 60px auto;
+}
+.auth-form h2 {
+	text-align: center;
+	font-size: 35px;
+	font-weight: 600;
+	color: rgb(78, 78, 78);
+}
+.auth-input-div {
+	width: 100%;
+	margin: 20px 0;
+}
+.auth-label {
+	font-size: 14px;
+	font-weight: 600;
+	color: rgb(78, 78, 78);
+}
+.auth-input {
+	width: 100%;
+	outline: none;
+	border: 0.8px solid #c9d0d4;
+	height: 40px;
+	margin-top: 5px;
+	font-size: 12px;
+	font-weight: 300;
+	color: rgb(88, 88, 88);
+	font-weight: 400;
+}
+.auth-input::placeholder {
+	font-size: 12px;
+	padding-left: 8px;
+	color: rgb(88, 88, 88);
+	font-weight: 400;
+}
+.auth-button {
+	margin: 15px 0;
+	background: rgb(83, 120, 255);
+	background: linear-gradient(
+		90deg,
+		rgba(83, 120, 255, 1) 0%,
+		rgba(150, 121, 255, 1) 100%
+	);
+	color: #ffffff;
+	border: none;
+	padding: 15px 25px;
+	font-size: 15px;
+	font-weight: 500;
+	width: 100%;
+	box-shadow: 0 5px 10px rgba(83, 120, 255, 0.4);
 }
 
 @media (prefers-reduced-motion: no-preference) {
