--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,16 @@
+/* Static Site Colors */
+/* 
+	White
+	Black
+	7F7F7F
+	F7F7F7
+	blue: 3452FF
+	red: FF1053
+
+	box-shadow: 0 60px 135px rgba(0,0,0,.14), 0 15px 65px rgba(0,0,0,.14);
+}
+*/
+
 .App {
 	width: 80%;
 	margin: 80px auto;
@@ -21,7 +34,7 @@ header {
 	top: 0;
 	left: 0;
 	display: table;
-	box-shadow: 0px 5px 15px #e9e9e9;
+	box-shadow: 0px 0px 10px #e9e9e9;
 	position: fixed;
 	z-index: 9999;
 	background-color: #ffffff;
