--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,10 @@ body {
 	font-family: 'Inter', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	scroll-behavior: smooth;
+}
+html {
+	scroll-behavior: smooth;
 }
 
 code {
