--- a/client/src/component/Guest Page/design/guest.css
+++ b/client/src/component/Guest Page/design/guest.css
@@ -46,7 +46,7 @@
 	height: 100vh;
 	width: 100%;
 	display: table;
-	background-color: #f7f7f7;
+	background-color: #ffffff;
 	/* background-image: url('../images/home-sec1.png'); */
 }
 .guest-sec1-div {
@@ -84,12 +84,65 @@
 	color: #000;
 }
 
-/* Sec2 */
+/* Sec2 About*/
 #guest-home-sec2 {
 	height: 100vh;
 	width: 100%;
 	display: table;
+	background-color: #f7f7f7;
+}
+.guest-about-div {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	margin: 90px 0 30px 0;
+}
+.guest-about-item {
+	width: 30%;
+	height: 450px;
+	margin: 0 auto;
+	display: table;
 	background-color: #ffffff;
+	box-shadow: 0 10px 35px rgba(0, 0, 0, 0.1);
+}
+.guest-about-top {
+	height: 200px;
+	width: 100%;
+}
+.guest-about-bottom {
+	height: 250px;
+	width: 100%;
+	display: table;
+}
+.guest-about-padding {
+	padding: 30px;
+}
+.guest-about-top img {
+	height: 100%;
+	width: 100%;
+}
+.guest-about-heading {
+	font-size: 15px;
+	font-weight: 600;
+	line-height: 24px;
+	color: #000;
+	text-align: center;
+}
+.guest-about-para {
+	font-size: 13px;
+	font-weight: 400;
+	line-height: 24px;
+	color: rgb(111, 111, 111);
+	text-align: center;
+}
+
+/* Divider */
+.guest-divider {
+	height: 55vh;
+	width: 100%;
+	display: table;
+	background-color: #ffffff;
+	/* background-image: url('../images/home-sec1.png'); */
 }
 
 /* Sec3 Services*/
