--- a/client/src/component/Guest Page/design/guest.css
+++ b/client/src/component/Guest Page/design/guest.css
@@ -10,7 +10,6 @@
 	box-shadow: 0 60px 135px rgba(0,0,0,.14), 0 15px 65px rgba(0,0,0,.14);
 }
 */
-
 /* Guest Styles */
 .Guest-App {
 	width: 80%;
@@ -197,10 +196,102 @@
 .guest-services-item:hover .guest-services-icon {
 	color: #ffffff;
 }
-/* Sec4 */
+
+/* Sec4 Contact*/
 #guest-home-sec4 {
 	height: 100vh;
 	width: 100%;
 	display: table;
 	background-color: #ffffff;
+}
+.Guest-contact-Main-App {
+	width: 90%;
+	margin: 60px auto;
+	height: 600px;
+	box-shadow: 0 30px 135px rgba(0, 0, 0, 0.1);
+	display: table;
+}
+.Guest-Contact-App {
+	display: flex;
+	flex-wrap: wrap;
+}
+.guest-contact-left {
+	width: 50%;
+	background-image: url('../images/contact.jpg');
+	background-position: center;
+	background-size: cover;
+}
+.guest-contact-right {
+	width: 50%;
+	display: table;
+}
+.guest-contact-overlay {
+	height: 100%;
+	width: 100%;
+	background-color: rgba(31, 31, 31, 0.6);
+}
+.guest-form {
+	width: 80%;
+	margin: 40px auto;
+}
+.guest-form-heading {
+	text-align: center;
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 35px;
+}
+.guest-input-div {
+	width: 100%;
+	margin: 17px 0px;
+}
+.guest-label {
+	width: 100%;
+	font-size: 13px;
+	font-weight: 400;
+}
+.guest-input {
+	width: 100%;
+	margin: 10px 0;
+	height: 35px;
+	border: 0.5px solid #b3b3b3;
+}
+.guest-textarea {
+	width: 100%;
+	margin: 10px 0;
+	height: 100px;
+	border: 0.5px solid #b3b3b3;
+}
+::placeholder {
+	font-size: 13px;
+	font-weight: 500;
+	padding: 10px;
+}
+.guest-input-submit {
+	background-color: #3452ff;
+	border: 1px solid #3452ff;
+	padding: 8px 30px;
+	color: #ffffff;
+	font-weight: 600;
+	font-size: 13px;
+	text-align: center;
+}
+.guest-contact-details-main {
+	padding-top: 40px;
+}
+.guest-contact-details {
+	margin: 40px 50px;
+}
+.guest-contact-icon {
+	font-size: 28px;
+	color: #ffffff;
+}
+.guest-contact-details-heading {
+	color: #ffffff;
+	font-size: 17px;
+	font-weight: 600;
+	line-height: 25px;
+}
+.guest-contact-details-para {
+	color: #b8b8b8;
+	font-size: 14px;
 }
