--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,19 +47,24 @@ header .logo {
 	font-size: 18px;
 	font-weight: 600;
 }
-nav {
+
+header .logo img{
+	height: 55px;
+	width: 170px;
+	margin-top: 5px;
+}
+
+ul {
 	float: right;
 	padding-right: 10%;
-}
-ul {
 	list-style: none;
 	display: flex;
 	margin: 0;
 }
-nav ul li {
+ul li {
 	padding: 0 20px;
 }
-nav ul li a {
+ul li a {
 	line-height: 55px;
 	height: 55px;
 	font-size: 14px;
@@ -134,6 +139,70 @@ a:hover {
 	box-shadow: 0 5px 10px rgba(83, 120, 255, 0.4);
 }
 
+.menu-icon {
+	cursor: pointer;
+	display: inline-block;
+	float: right;
+	padding: 28px 20px;
+	position: relative;
+	user-select: none;
+  }
+  
+ .menu-icon .navicon {
+	background: #333;
+	display: block;
+	height: 2px;
+	position: relative;
+	transition: background .2s ease-out;
+	width: 18px;
+  }
+  
+ .menu-icon .navicon:before,
+ .menu-icon .navicon:after {
+	background: #333;
+	content: '';
+	display: block;
+	height: 100%;
+	position: absolute;
+	transition: all .2s ease-out;
+	width: 100%;
+  }
+  
+ .menu-icon .navicon:before {
+	top: 5px;
+  }
+  
+ .menu-icon .navicon:after {
+	top: -5px;
+  }
+  
+  /* menu btn */
+  
+ .menu-btn {
+	display: none;
+  }
+  
+ .menu-btn:checked ~ .menu {
+	max-height: 240px;
+  }
+  
+ .menu-btn:checked ~ .menu-icon .navicon {
+	background: transparent;
+  }
+  
+ .menu-btn:checked ~ .menu-icon .navicon:before {
+	transform: rotate(-45deg);
+  }
+  
+ .menu-btn:checked ~ .menu-icon .navicon:after {
+	transform: rotate(45deg);
+  }
+  
+ .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+ .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+	top: 0;
+  }
+
 @media (prefers-reduced-motion: no-preference) {
 	.App-logo {
 		animation: App-logo-spin infinite 20s linear;
@@ -148,3 +217,41 @@ a:hover {
 		transform: rotate(360deg);
 	}
 }
+
+
+
+@media (min-width: 768px) {
+	/* .header li {
+	  float: left;
+	}
+	.header li a {
+	  padding: 20px 30px;
+	} */
+	.menu {
+	  clear: none;
+	  float: right;
+	  max-height: none;
+	}
+	.menu-icon {
+	  display: none;
+	}
+  }
+@media (max-width: 768px) {
+	.menu-btn{
+		float: right;
+		padding-right: 10%;
+	}
+	.menu {
+		height: 100%;
+		display: none;
+		width: 100%;
+		position: relative;
+		margin-top: 60px;
+	}
+	.menu li {
+		border-bottom: 0.5px #333;
+	}
+	.active-menu {
+	  display: block!important;
+	}
+  }
